fix bug import booking excel, register work schedules